--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "webpack-dev-server",
     "build": "cross-env NODE_ENV=production webpack"
   },
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d webpack-dev-server",
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -16,8 +18,8 @@
     "cross-env": "5.1.5",
     "css-loader": "0.28.11",
     "file-loader": "1.1.11",
-    "font-awesome": "4.7.0",
     "gh-pages": "^3.0.0",
+    "font-awesome": "4.7.0",
     "jquery": "3.3.1",
     "mini-css-extract-plugin": "0.4.0",
     "node-sass": "4.12.0",
